# crm-api-test-developer

./: .env.sample  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci_cd.yml
crm_api/: asgi.py  settings.py  urls.py  wsgi.py
customers/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
customers/management/commands/: seed_db.py
customers/migrations/: 0001_initial.py
